fixed horizontal overflow issue

--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -1,3 +1,7 @@
+body{
+  overflow-x: hidden;
+}
+
 .holder{
   min-height: 100vh;
   height: ;
